<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@drawable/index_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size_6"
        android:layout_marginTop="@dimen/text_size_6"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_alignParentRight="true"
                android:background="@drawable/nub_tips"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_weather"
                android:text="@string/tv_weather"
                android:textColor="@color/green" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_information"
                android:text="@string/tv_information"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_alignParentRight="true"
                android:background="@drawable/nub_tips"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:drawableTop="@drawable/ic_market"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/tv_market"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_centerHorizontal="true"
                android:background="@drawable/nub_tips"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_network_shed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_far_allowed"
                android:text="@string/tv_shed_connected_internet"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_alignParentRight="true"
                android:background="@drawable/nub_tips"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/text_size_6">

            <TextView
                android:id="@+id/my_farming_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_size_16"
                android:drawableLeft="@drawable/ic_far_task"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_farming_task"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_alignParentRight="true"
                android:background="@drawable/nub_tips"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/vi_line_w"
            android:layout_height="match_parent"
            android:background="@color/test_dark_transparent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/text_size_6">

            <TextView
                android:id="@+id/my_farming_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_size_8"
                android:drawableLeft="@drawable/ic_far_report2"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_farming_report"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:layout_width="@dimen/nub_icon_w"
                android:layout_height="@dimen/nub_icon_h"
                android:layout_alignParentRight="true"
                android:background="@drawable/nub_tips"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/vi_line_h"
        android:layout_marginTop="@dimen/text_size_6"
        android:background="@color/test_dark_transparent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_sys_alarm"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/sysalarmImage"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:background="@drawable/ic_sys_alarm" />

            <TextView
                android:id="@+id/tv_sysalarmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_sys_alarm"
                android:textColor="#050505"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/vi_line_w"
            android:layout_height="match_parent"
            android:background="@color/test_dark_transparent" />

        <LinearLayout
            android:id="@+id/ll_sys_announ"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/ic_sys_announ" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_sys_announ"
                android:textColor="#050505"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/vi_line_w"
            android:layout_height="match_parent"
            android:background="@color/test_dark_transparent" />

        <LinearLayout
            android:id="@+id/ll_adv_sug"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/advsugImage"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:background="@drawable/ic_adv_sug" />

            <TextView
                android:id="@+id/signText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_adv_sug"
                android:textColor="#050505"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/vi_line_w"
            android:layout_height="match_parent"
            android:background="@color/test_dark_transparent" />

        <LinearLayout
            android:id="@+id/ll_login_log"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/ic_login_log"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_login_log"
                android:textColor="#050505"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/vi_line_h"
        android:background="@color/test_dark_transparent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/ll_internal_msg"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/ic_internal_msg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_internal_msg"
                android:textColor="#050505"
                android:textSize="13sp" />
        </LinearLayout>


        <View
            android:layout_width="@dimen/vi_line_w"
            android:layout_height="match_parent"
            android:background="@color/test_dark_transparent" />

        <LinearLayout
            android:id="@+id/ll_origin_mag"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/ic_origin"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_origin_mag"
                android:textColor="#050505"
                android:textSize="13sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/vi_line_h"
        android:layout_marginBottom="@dimen/text_size_6"
        android:background="@color/test_dark_transparent" />

</LinearLayout>